--- a/main.css
+++ b/main.css
@@ -1,51 +1,61 @@
-.main-box{
-  max-width: 600px;
-  margin: 5% auto;
+body{
+  padding: 0 0;
+  margin: 0 0;
+}
+
+.container{
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+
+
+/* Main (top) section of the web app */
+.main-section{
+  margin: 3% 0;
+  background-color: #cecece;
 }
 
 .left-side{
-  position: relative;
-  text-align: center;
-  font-size: 110%;
-  width: 35%;
-  max-width: 250px;
-  margin: 0 auto;
+  font-size: 1.25em;
 }
 
-.right-side{
-  position: relative;
-  height: 55%;
-  width: 55%;
-  max-width: 250px;
-  margin: 0 auto;
+#main-location{
+
 }
 
-.temperature-info{
-  font-size: 180%;
+#main-temp{
+  font-size: 2em;
 }
 
-.temperature-button{
-  color: #d3d3d3;
+#main-weather-info{
+
+}
+
+#temperature-button{
+  color: white;
   font-size: 70%;
 }
 
-.second-half{
-  padding: 5% 0 0 0;
+
+
+/* Bottom section of the web app displaying the forecast */
+#forecast-section{
 }
 
-.second-title{
-  position: relative;
+.forecast-box{
   float: left;
+  width: 45%;
+  padding: 2% 1%;
+  background-color: #17C5FF;
 }
 
-.forecast-bar{
-  margin: auto;
-  clear: both;
-}
 
-.forecast-block{
-  text-align: center;
-  outline: 1px solid;
-  width: 30%;
-  padding: 2% 4% 2% 4%;
+
+
+@media(min-width: 768px){
+  .forecast-box{
+    width:22%;
+  }
 }
