--- a/main.css
+++ b/main.css
@@ -1,10 +1,12 @@
 body{
   padding: 0 0;
   margin: 0 0;
-  background-color: #cecece;
+  background-color: #ffbe99;
   font-family: 'Open Sans Condensed', sans-serif;
   font-weight: 700;
 }
+
+/* #cecece */
 
 .container{
   width: 100%;
