--- a/main.css
+++ b/main.css
@@ -1,12 +1,10 @@
 body{
   padding: 0 0;
-  margin: 0 0;
+  margin: 10 0;
   background-color: #ffbe99;
   font-family: 'Open Sans Condensed', sans-serif;
   font-weight: 700;
 }
-
-/* #cecece */
 
 .container{
   width: 100%;
@@ -16,22 +14,29 @@ body{
 
 
 
+#searchbar{
+  border: 2px solid #36CDFF;
+  border-radius: 2px;
+  height: 26px;
+  width: 250px;
+  font-size: 100%;
+}
+
 /* Main (top) section of the web app */
 .main-section{
-  margin: 3% 0;
-  padding: 10% 0 15%; 0;
+  margin: 2% auto;
+  padding: 10% 0 10%; 0;
   display: flex;
+  justify-content: center;
   font-size: 1.5em;
 }
 
 .main-section-component{
   flex: 1;
   text-align: center;
+  max-width: 200px;
 }
 
-
-#left-side{
-}
 
 #main-weather-icon{
   display: flex;
@@ -59,14 +64,18 @@ body{
 
 
 /* Bottom section of the web app displaying the forecast */
+#forecast-section{
+  display: flex;
+}
+
 #forecast-title{
   margin: 0 0;
   font-size: 1.3em;
 }
 
 .forecast-box{
-  float: left;
-  width: 50%;
+  flex: 1;
+  width: 25%;
   margin: 0 0;
   padding: 2% 0;
   text-align: center;
@@ -114,6 +123,6 @@ body{
   }
 
   .forecast-box{
-    width:25%;
+    width:20%;
   }
 }
