--- a/main.css
+++ b/main.css
@@ -6,13 +6,15 @@ body{
   font-weight: 700;
 }
 
+.navbar{
+  text-align: right;
+}
+
 .container{
   width: 100%;
   max-width: 800px;
   margin: 0 auto;
 }
-
-
 
 #searchBar{
   border: 2px solid #36CDFF;
@@ -118,6 +120,7 @@ body{
 
 
 @media(min-width: 768px){
+
   .main-section{
     font-size: 2em;
   }
